# sleeplab-format

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
api/extractor/: index.html
api/models/: index.html
api/reader/: index.html
api/writer/: index.html
concepts/: index.html
contributing/: index.html
dataset_generation/: __init__.py  data_types.py  edf.py  models.py  reader.py  writer.py
dataset_generation/profusion_4_1/: README.md  generate.py
docs/: concepts.md  contributing.md  index.md  usage.md
docs/api/: extractor.md  models.md  reader.md  writer.md
docs/examples/: automatic_sleep_staging.md  edf_conversion.md
examples/automatic_sleep_staging/: index.html
examples/benchmark/: README.md  benchmark.py  benchmark_out.json  requirements.txt
examples/dod_sleep_staging/: README.md  convert_data.py  dataset.py  download_data.py  extractor_config.yml  requirements.txt  sleeplab_extractor_config.yml  train.py
examples/edf_conversion/: index.html
examples/sleep_cassette_conversion/: README.md  convert_data.py  requirements.txt
examples/sleep_edf_conversion/: README.md
profusion/: convert.py
scripts/: delete_pycache.sh
search/: search_index.json
sleeplab_format/: __init__.py  edf.py  models.py  reader.py  writer.py
sleeplab_format/converters/profusion/: convert.py
sleeplab_format/test_utils/: fixtures.py
src/sleeplab_format/: __init__.py  models.py  reader.py  writer.py
src/sleeplab_format/converters/profusion/: README.md
src/sleeplab_format/extractor/: cli.py  config.py  preprocess.py
src/sleeplab_format/test_utils/: fixtures.py
tests/: conftest.py  create_datasets.py  test_models.py  test_profusion_4_1.py  test_reader.py  test_writer.py
tests/extractor/: test_extract.py  test_parse_config.py
tests/extractor/data/: example_config.yml
usage/: index.html
